# hipp

./: .readthedocs.yml  CITATION.cff  CMakeLists.txt  Makefile  README.md  SUMMARY.md
module/: CMakeLists.txt  hipp_config.h.in
module/algorithm/: CMakeLists.txt
module/algorithm/header/: hippalgorithm.h
module/algorithm/header/kdsearch/: kd_obj_base.h  kd_tree.h  kd_tree_raw.h  kd_tree_raw_impl.h  xtree_raw.h  xtree_raw_impl.h
module/algorithm/header/mathops/: mathops.h  mathops_base.h  mathops_logspaced.h
module/cntl/: CMakeLists.txt
module/cntl/header/: hippcntl.h
module/cntl/header/error/: error_application.h  error_class.h  error_macro.h  error_type.h
module/cntl/header/incl/: incl.h  sys_spec.h
module/cntl/header/memory/: mem_obj.h  mem_raw.h
module/cntl/header/stream/: fmt_io.h  stream.h  stream_array.h  stream_base.h  stream_fmt_io.h  stream_pretty.h  stream_pretty_log.h  stream_str.h
module/cntl/header/time/: time_ticker.h  time_utils.h
module/cntl/src/: CMakeLists.txt
module/cntl/src/error/: CMakeLists.txt
module/cntl/src/stream/: CMakeLists.txt  stream_pretty.cpp
module/cntl/src/time/: CMakeLists.txt  time_ticker.cpp
module/hippalgorithm/: CMakeLists.txt
module/hippalgorithm/header/: hippalgorithm.h
module/hippalgorithm/header/hippalgorithm_kdsearch/: kd_tree.h  kd_tree_raw.h  kdsearch.h
module/hippalgorithm/header/hippalgorithm_mathops/: mathops_linspaced.h  mathops_outer.h
module/hippcntl/: CMakeLists.txt
module/hippcntl/header/: hippcntl.h
module/hippcntl/header/hippcntl_error/: error.h  error_application.h  error_class.h  error_macro.h  error_type.h
module/hippcntl/header/hippcntl_generic/: concept_contiguous_buffer.h  concept_dynamic_array.h  concept_general_array.h  concept_raw_array.h  generic.h  generic_base.h
module/hippcntl/header/hippcntl_incl/: incl.h
module/hippcntl/header/hippcntl_memory/: constructor.h  mem.h  mem_obj.h  mem_raw.h
module/hippcntl/header/hippcntl_stream/: stream.h  stream_array.h  stream_base.h  stream_fmt_io.h  stream_pretty.h  stream_pretty_log.h  stream_str.h
module/hippcntl/header/hippcntl_time/: time_ticker.h
module/hippcntl/src/: CMakeLists.txt
module/hippcntl/src/hippcntl_error/: CMakeLists.txt  error_application.cpp  error_class.cpp  error_type.cpp
module/hippcntl/src/hippcntl_stream/: CMakeLists.txt  stream_pretty_log.cpp
module/hippcntl/src/hippcntl_time/: CMakeLists.txt  time_ticker.cpp
module/hippio/: CMakeLists.txt
module/hippio/header/: hippio.h
module/hippio/header/hippio_hdf5/: h5.h  h5_base.h  h5_error.h  h5_obj.h  h5_obj_attr.h  h5_obj_base.h  h5_obj_dataset.h  h5_obj_dataspace.h  h5_obj_datatype.h  h5_obj_file.h  h5_obj_group.h  h5_obj_named_base.h  h5_obj_proplist.h  h5_obj_raw_attr.h  h5_obj_raw_base.h  h5_obj_raw_dataset.h  h5_obj_raw_dataspace.h  h5_obj_raw_link.h  h5_obj_raw_proplist.h  h5_type_raw.h  h5_util_datapacket.h  h5_util_geometry.h  h5_util_path.h  h5x.h  h5x_table.h  h5x_table_field.h  h5x_table_helper.h
module/hippio/header/hippio_hdf5_impl/: h5_impl.h  h5_obj_attr_impl.h  h5_obj_dataset_impl.h  h5_obj_datatype_impl.h  h5_obj_group_impl.h  h5_obj_named_base_impl.h  h5_util_datapacket_impl.h  h5_util_geometry_impl.h  h5x_table_impl.h
module/hippio/header/hippio_hdf5_raw/: h5_base.h  h5_error.h  h5_raw.h  h5_raw_attr.h  h5_raw_base.h  h5_raw_dataset.h  h5_raw_dataspace.h  h5_raw_datatype.h  h5_raw_error.h  h5_raw_file.h  h5_raw_group.h  h5_raw_link.h  h5_raw_named_base.h  h5_raw_proplist.h
module/hippio/src/: CMakeLists.txt
module/hippio/src/hippio_hdf5/: CMakeLists.txt  h5_error.cpp  h5_obj_attr.cpp  h5_obj_dataset.cpp  h5_obj_dataspace.cpp  h5_obj_datatype.cpp  h5_obj_file.cpp  h5_obj_group.cpp  h5_obj_named_base.cpp  h5_obj_proplist.cpp  (+2 more)
module/hippmpi/: CMakeLists.txt
module/hippmpi/header/: hippmpi.h  hippmpi_config.h.in
module/hippmpi/src/: CMakeLists.txt
module/hippnumerical/: CMakeLists.txt
module/hippnumerical/header/: hippnumerical.h
module/hippnumerical/src/: CMakeLists.txt
module/hippsimd/: CMakeLists.txt
module/hippsimd/header/: hippsimd.h
module/io/: CMakeLists.txt
module/io/header/: hippio.h
module/mpi/: CMakeLists.txt
module/mpi/header/: hippmpi.h
module/mpi/src/: CMakeLists.txt
module/numerical/: CMakeLists.txt
module/numerical/header/: hippnumerical.h
module/numerical/src/: CMakeLists.txt
module/simd/: CMakeLists.txt
module/simd/header/: hippsimd.h
test/: CMakeLists.txt  Makefile  init_env.sh
test/algorithm/: CMakeLists.txt  mathops_vecinit.gtest.cpp
test/cntl/: CMakeLists.txt  Makefile  stream.gtest.cpp
test/hippalgorithm/: CMakeLists.txt  mathops_outer.gtest.cpp
test/hippcntl/: CMakeLists.txt  generic_concept.gtest.cpp  stream.gtest.cpp  time_ticker.gtest.cpp
test/hippio/: CMakeLists.txt  h5dataset.gtest.cpp  h5datatype.gtest.cpp  h5xtable.gtest.cpp
test/hippio/h5/: CMakeLists.txt  attr.gtest.cpp  attr_manager.gtest.cpp  dataset.gtest.cpp  dataset_manager.gtest.cpp  datatype.gtest.cpp  file.gtest.cpp  group.gtest.cpp  named_obj.gtest.cpp  util_datapacket.gtest.cpp  xtable.gtest.cpp
test/hippmpi/: CMakeLists.txt  collective.cpp  collective.test.cpp  comm.test.cpp  datatype.test.cpp  env.test.cpp  mpprof.test.cpp  p2p.cpp  p2p.test.cpp  pack.cpp  virtual_topology.test.cpp
test/hippmpi/include/: mpi_test_data_buffer.h  mpi_test_incl.h  testdata.h  testmacro.h
test/hippnumerical/: CMakeLists-2.txt  CMakeLists.txt  function_special_function.gtest.cpp  geometry.gtest.cpp  gsl_util_multimin_fn.gtest.cpp  gsl_util_vector.gtest.cpp  kdsearch_balltree.gtest.cpp  kdsearch_balltree_raw.gtest.cpp  kdsearch_insertable_balltree_raw.gtest.cpp  kdsearch_kdmesh.gtest.cpp  kdsearch_kdtree.gtest.cpp  linalg_darray.gtest.cpp  linalg_sarray.gtest.cpp  linalg_svec.gtest.cpp  random_number.gtest.cpp
test/io/: CMakeLists.txt  Makefile  group.gtest.cpp  h5group.gtest.cpp
test/mpi/: CMakeLists.txt  Makefile  t_p2p.cpp  t_pack.cpp  testdata.h
test/mpi/include/: testdata.h  testmacro.h
test/numerical/: CMakeLists.txt  function_min.gtest.cpp  function_multimin.gtest.cpp
(+652 files in other folders)
